add centered text to full page

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <title>Currency Exchange</title>
 </head>
 <body>
-  <div class="container">
-    <div class="jumbotron mt-5 text-center"> text-center might belong in div above
+  <div class="container text-center">
+    <div class="jumbotron mt-5"> text-center might belong in div above
       <h1>Currency Exchange</h1>
       <p>Enter the amount you wish to exchange in USD, select the currency you will be exchanging it for and hit submit!</p>
     </div>
