--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <div class="container text-center">
-    <div class="jumbotron mt-5"> text-center might belong in div above
+    <div class="jumbotron mt-5">
       <h1>Currency Exchange</h1>
       <p>Enter the amount you wish to exchange in USD, select the currency you will be exchanging it for and hit submit!</p>
     </div>
