add euro option

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         <option value="TND">Tunisian Dinar</option>
         <option value="VUV">Vanuatu Vatu</option>
         <option value="ZWL">Zimbabwean Dollar</option>
+        <option value="EUR">Euro</option>
       </select>
       <h2>What currency do you wish to exchange it to?</h2>
       <select class="form-control" id="toCurrency">
@@ -24,6 +25,7 @@
         <option value="TND">Tunisian Dinar</option>
         <option value="VUV">Vanuatu Vatu</option>
         <option value="ZWL">Zimbabwean Dollar</option>
+        <option value="EUR">Euro</option>
       </select>
       <label for="amountToExchange">Enter the amount:</label>
       <input id="amountToExchange" type="text"></input>
